# reference_integration

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  known_good.json  pyproject.toml  score_modules.MODULE.bazel  versions.json
.github/workflows/: build_and_test_linux.yml  build_and_test_on_every_pr.yml  codeql-multiple-repo-scan.yml  test_and_docs.yml
bazel_common/: bundlers.bzl  score_basic_bazel.MODULE.bazel  score_basic_tools.MODULE.bazel  score_gcc_toolchains.MODULE.bazel  score_images.MODULE.bazel  score_modules.MODULE.bazel  score_modules_tooling.MODULE.bazel  score_python.MODULE.bazel  score_qnx_toolchains.MODULE.bazel  score_rust_toolchains.MODULE.bazel
docs/: codeql-bazel-analysis.md
docs/verification/: coverage_summary.md  unit_test_summary.md  verification.rst
feature_integration_tests/: README.md
feature_integration_tests/configs/: BUILD  qemu_target_config.json
feature_integration_tests/itf/: BUILD  test_scrample.py
feature_integration_tests/rust_test_scenarios/: BUILD  Cargo.toml
feature_integration_tests/rust_test_scenarios/src/: main.rs
feature_integration_tests/test_cases/: BUILD  conftest.py  fit_scenario.py  persistency_scenario.py  pytest.ini  requirements.txt  test_properties.py
feature_integration_tests/test_cases/tests/basic/: test_orchestartion_with_persistency.py
feature_integration_tests/test_cases/tests/persistency/: test_combined_requirements.py  test_datatype_support.py  test_default_values.py  test_multiple_kvs_per_app.py  test_reset_to_default.py
feature_integration_tests/test_scenarios/cpp/: BUILD  README.md
feature_integration_tests/test_scenarios/cpp/src/: main.cpp
feature_integration_tests/test_scenarios/rust/: BUILD
feature_integration_tests/test_scenarios/rust/src/: main.rs
feature_showcase/rust/orchestration_persistency/: main.rs
images/: .bazelrc  MODULE.bazel  score.sh
images/bazel_common/: bundlers.bzl  score_basic_tools.MODULE.bazel  score_modules.MODULE.bazel  score_qnx_toolchains.MODULE.bazel
images/ebclfsa_aarch64/: .bazelrc  BUILD  MODULE.bazel  README.md
images/ebclfsa_aarch64/persistency_integration/: BUILD  run_qemu.sh
images/ebclfsa_aarch64/persistency_integration/scripts/: cpp_tests_persistency.sh
images/ebclfsa_aarch64/scrample_integration/: BUILD  run_qemu.sh
images/ebclfsa_aarch64/scrample_integration/etc/: mw_com_config.json
images/ebclfsa_aarch64/scrample_integration/src/: main.cc
images/feature_integration_tests/configs/: BUILD
images/feature_integration_tests/configs/etc/: logging.json
images/feature_integration_tests/itf/: BUILD  test_persistency.py  test_ssh.py
images/feature_integration_tests/test_cases/: BUILD
images/feature_integration_tests/test_scenarios/rust/: BUILD
images/linux_x86_64/: .bazelrc  BUILD  MODULE.bazel  bazel_common
images/linux_x86_64/runners/: docker_x86_64
images/qnx_x86_64/: .bazelrc  BUILD  MODULE.bazel  feature_integration_tests  showcases
images/qnx_x86_64/configs/: BUILD  dhcpcd.conf  group  hostname  network_capture.sh  network_setup.sh  network_setup_dhcp.sh  passwd  pci_hw.cfg  pci_server.cfg  profile  qcrypto.conf  ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config  startup.sh
images/qnx_x86_64/runners/: qemu_x86_64
images/qnx_x86_64/scripts/: run_qemu.sh
images/runners/docker_x86_64/: BUILD
images/runners/docker_x86_64/scripts/: BUILD  run_docker.sh
images/runners/qemu_x86_64/: BUILD
images/runners/qemu_x86_64/scripts/: BUILD  qnx_wireshark.sh
images/showcases/: BUILD
images/showcases/kyron/: main.rs
images/showcases/orchestration_persistency/: BUILD
integration/: .bazelrc
integration/bazel_common/: score_basic_tools.MODULE.bazel  score_modules.MODULE.bazel
integration/images/linux_x86_64/: BUILD
integration/images/qnx_x86_64/configs/: network_setup_dhcp.sh
integration/images/qnx_x86_64/libs/: BUILD
integration/io_sock_module/: README.MD
integration/io_sock_module/src/: Makefile  build.sh  common.mk  mods-kso.c
integration/io_sock_module/test/: README.MD  TEST_RESULTS.MD  build_and_test_instructions.txt  client.py  tcp_test.rs
integration/io_sock_module/test/tcp_communication/: app_TCP_comm.rs  client_TCP_comm.py  kso_TCP_comm.c
main/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js  status_dashboard.html
main/_collections/score_baselibs/docs/: index.html
main/_sources/: index.rst.txt
main/_sources/place_holder/: communication.rst.txt  orchestrator.rst.txt  persistency.rst.txt
main/place_holder/: communication.html  orchestrator.html  persistency.html
main/verification/: coverage_summary.html  unit_test_summary.html  verification.html
pr-2/: needs.json  schema_violations.json
pr-2/verification/: coverage_summary.html  verification.html
pr-3/: genindex.html  needs.json  schema_violations.json
pr-3/verification/: coverage_summary.html
pr-7/: needs.json  schema_violations.json  search.html  searchindex.js  status_dashboard.html
pr-7/verification/: coverage_summary.html
pr-9/: needs.json  schema_violations.json  searchindex.js  status_dashboard.html
pr-9/verification/: coverage_summary.html  unit_test_summary.html  verification.html
qnx_qemu/: MODULE.bazel
runners/docker_x86_64/: BUILD
runners/docker_x86_64/scripts/: run_docker.sh
runners/qemu_x86_64/: BUILD
runners/qemu_x86_64/scripts/: run_qemu.sh  run_qemu_portforward.sh
scripts/: quality_runners.py
scripts/tooling/: BUILD  requirements.in  requirements.txt
scripts/tooling/lib/: git_operations.py
scripts/tooling/tests/: conftest.py  test_check_approvals.py  test_known_good.py  test_report.py
scripts/workflow/: codeql_bazel_scan.sh
showcases/: BUILD
showcases/cli/: BUILD  main.rs
showcases/kyron/: BUILD  kyron.score.json
showcases/orchestration_persistency/: main.rs  orch_per.score.json
showcases/standalone/: BUILD
v0.6/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  searchindex.js
v0.6/verification/: coverage_summary.html  unit_test_summary.html  verification.html
(+4018 files in other folders)
