# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_ref_int",
    version = "0.6.0",
    compatibility_level = 0,
)

# Include common modules
include("//bazel_common:score_basic_bazel.MODULE.bazel")

# GCC toolchains
include("//bazel_common:score_gcc_toolchains.MODULE.bazel")  # WIP: Not used yet as have problems with IFS toolchain

# GCC toolchains
include("//bazel_common:score_qnx_toolchains.MODULE.bazel")  # WIP: Not used yet as have problems with IFS toolchain

# Rust toolchains
include("//bazel_common:score_rust_toolchains.MODULE.bazel")

# Python support
include("//bazel_common:score_python.MODULE.bazel")

# Score modules tools
include("//bazel_common:score_modules_tooling.MODULE.bazel")

# Score modules
include("//bazel_common:score_modules_target_sw.MODULE.bazel")

# Score test images
include("//bazel_common:score_images.MODULE.bazel")

bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

# Hedron's Compile Commands Extractor for IDE support and CodeQL analysis
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# Implicit dependencies for score_tooling
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "score_rust_policies", version = "0.0.3")

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc")
git_override(
    module_name = "trlc",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

# Currently required for ifs tooling
bazel_dep(name = "score_toolchains_qnx", version = "0.0.7")

toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx", dev_dependency = True)
toolchains_qnx.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_ifs")
