# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_rpm", version = "0.1.0")
git_override(
    module_name = "rules_rpm",
    commit = "71324b1502db978001cc5c11a46fcb603b401ce6",
    remote = "https://github.com/eclipse-score/inc_os_autosd.git",
    strip_prefix = "toolchain/rpm",
)

bazel_dep(name = "flatbuffers", version = "25.9.23")
git_override(
    module_name = "flatbuffers",
    commit = "187240970746d00bbd26b0f5873ed54d2477f9f3",
    remote = "https://github.com/google/flatbuffers.git",
)
