# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.0")
git_override(
    module_name = "score_bazel_cpp_toolchains",
    commit = "eba6b8c4b2d1d410a7f0cf8aae8b7938320bf6c8",
    remote = "https://github.com/eclipse-score/bazel_cpp_toolchains.git",
)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_ebclfsa_toolchain",
    runtime_ecosystem = "ebclfsa",
    sdk_version = "0.1.0",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
)

## AutoSD10 Toolchain
gcc.toolchain(
    name = "score_autosd10_x86_64_toolchain",
    runtime_ecosystem = "autosd10",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
)

bazel_dep(name = "os_autosd_toolchain", version = "0.0.1")

# override with git
git_override(
    module_name = "os_autosd_toolchain",
    commit = "71324b1502db978001cc5c11a46fcb603b401ce6",
    remote = "https://github.com/eclipse-score/inc_os_autosd.git",
    strip_prefix = "toolchain",
)

autosd_10_gcc = use_extension("@os_autosd_toolchain//autosd_10_gcc:extensions.bzl", "autosd_10_gcc_extension")
use_repo(autosd_10_gcc, "autosd_10_gcc_repo")

# Register the RPM toolchain
rpm_toolchain = use_extension("@rules_rpm//toolchain:extensions.bzl", "rpm_toolchain")
use_repo(rpm_toolchain, "rpm_toolchain")

use_repo(
    gcc,
    "score_autosd10_x86_64_toolchain",
    "score_ebclfsa_toolchain",
    "score_gcc_x86_64_toolchain",
)
