bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_22_04",
    digest = "sha256:3ba65aa20f86a0fad9df2b2c259c613df006b2e6d0bfcc8a146afb8c525a9751",
    image = "ubuntu",
    platforms = ["linux/amd64"],
    tag = "22.04",
)
oci.pull(
    name = "centos_stream10",
    digest = "sha256:01858c09da8f130c718c37673b83aaaf65c6493e66f4c674caffcffe9ed4c225",
    image = "quay.io/centos/centos",
    platforms = ["linux/amd64"],
    tag = "stream10",
)
use_repo(oci, "centos_stream10", "centos_stream10_linux_amd64")
use_repo(oci, "ubuntu_22_04", "ubuntu_22_04_linux_amd64")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "eb_corbos_toolkit_fastdev_archive",
    sha256 = "9ca3891b27e4b7bbf6c519d8924283e89c03b62513a988f751a3ee3d10c293e4",
    url = "https://github.com/Elektrobit/eb_corbos_toolkit/releases/download/v2.0.0-beta1/fastdev-ubuntu-ebclfsa-ebcl-qemuarm64.tar.gz",
)

bazel_dep(name = "score_rules_imagefs", version = "0.0.1")

imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs", dev_dependency = True)
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_x86_64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)
use_repo(
    imagefs,
    "score_qnx_x86_64_ifs_toolchain",
)
