# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "aspect_rules_py", version = "1.5.2")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_score_venv_test",
    python_version = PYTHON_VERSION,
    requirements_lock = "//feature_integration_tests/test_cases:requirements.txt.lock",
)
use_repo(pip, "pip_score_venv_test")

pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "ref_int_scripts_env",
    python_version = PYTHON_VERSION,
    requirements_lock = "//scripts/tooling:requirements.txt",
)
use_repo(pip, "ref_int_scripts_env")
