bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "score_toolchains_rust", version = "0.4.0", dev_dependency = True)
git_override(
    module_name = "rules_rust",
    remote = "https://github.com/pawelrutkaq/rules_rust.git", # To be fixed once rule_rust is in score bazel registry
    commit = "293337fd6402ec3dfbeb8f2d589f38ad9124dadd",
)