[package]
name = "rust_test_scenarios"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version ="4.5.38", features = ["derive"] }
orchestration = { git = "https://github.com/eclipse-score/orchestrator.git", branch = "main" }
kyron = { git = "https://github.com/eclipse-score/orchestrator.git", branch = "main" }
kyron-foundation = { git = "https://github.com/eclipse-score/orchestrator.git", branch = "main" }
rust_kvs = { git = "https://github.com/eclipse-score/inc_mw_per.git", branch = "main" }
test_scenarios_rust = { git = "https://github.com/eclipse-score/testing_tools.git", branch = "main" }