bazel_dep(name = "rules_shell", version = "0.6.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "score_bazel_platforms", version = "0.0.4")
bazel_dep(name = "score_crates", version = "0.0.6")
git_override(
    module_name = "score_crates",
    remote = "https://github.com/eclipse-score/score-crates.git",
    commit = "ff8f312cd8ac221ff7562496c7f4d6b9b5c8ebb9",
)

