bazel_dep(name = "score_baselibs", version = "0.1.3")
bazel_dep(name = "score_communication", version = "0.1.1") # EB needs 0.1.2 but others does not work with it
bazel_dep(name = "score_persistency", version = "0.2.1")
bazel_dep(name = "score_scrample", version = "0.1.0")
bazel_dep(name = "score_orchestrator")
git_override(
    module_name = "score_orchestrator",
    remote = "https://github.com/eclipse-score/orchestrator.git",
    commit = "18e136c34750c5db707f27f917d52efc7541e087",
)

bazel_dep(name = "score_kyron")
git_override(
    module_name = "score_kyron",
    remote = "https://github.com/eclipse-score/kyron.git",
    commit = "ed312bdc6a50abc73f97b8c7e2ad4726fed06e81",
)

git_override(
    module_name = "score_persistency",
    remote = "https://github.com/eclipse-score/persistency.git",
    commit = "0037034bf853e5f955f028fab54ed319fb0441c3",
)