bazel_dep(name = "rules_shell", version = "0.6.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "score_bazel_platforms", version = "0.0.4")
bazel_dep(name = "score_docs_as_code", version = "2.3.0")
bazel_dep(name = "score_tooling", version = "1.1.0")

bazel_dep(name = "score_crates", version = "0.0.6")
git_override(
    module_name = "score_crates",
    remote = "https://github.com/eclipse-score/score-crates.git",
    commit = "ff8f312cd8ac221ff7562496c7f4d6b9b5c8ebb9",
)


bazel_dep(name = "rules_rpm", version = "0.1.0")
git_override(
    module_name = "rules_rpm",
    branch = "main",
    remote = "https://github.com/bilelmoussaoui/bazel-rpm.git",
)

bazel_dep(name = "flatbuffers", version = "25.9.23")
git_override(
    module_name = "flatbuffers",
    commit = "187240970746d00bbd26b0f5873ed54d2477f9f3",
    remote = "https://github.com/google/flatbuffers.git",
)
